# home_account

./: .gitignore  README.md  conda_requirements.txt  pyproject.toml  run.py
app/: __init__.py
app/models/: buy_sheet.py  gspread_workbook.py  income_sheet.py  saving_sheet.py
app/services/: accounting_interval.py  calc_kpi.py
app/services/plot/: by_plotly.py  month_buy_plot.py  plot_interface.py  trace_data_class.py  year_income_plot.py
app/static/js/: main.js
app/views/: view_index.py  view_registration.py  view_report.py
src/: app.py  calc_kpi.py  handle_spreadsheet.py  handle_time.py  plotting.py
src/templates/: base.html  index.html  month_report.html  registraion_income.html  registraion_saving.html  registration_buy.html  year_report.html
tests/: conftest.py
tests/unit/models/: test_buy_sheet.py  test_gspread_workbook.py  test_income_sheet.py  test_saving_sheet.py
tests/unit/services/: test_accounting_interval.py  test_calc_kpi.py
tests/unit/services/plot/: test_buy_plot.py  test_trace_data_class.py
tests/unit/test_views/: test_view_index.py  test_view_registration.py
