[tool.poetry]
name = "home-account"
version = "0.1.0"
description = ""
authors = ["takutori <t.taichi.takutori.0214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
plotly = "^6.0.0"
gspread = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
